--- a/public/css/service.css
+++ b/public/css/service.css
@@ -16,6 +16,9 @@
 .row-9 {
     grid-row: 9;
 }
+.row-10 {
+    grid-row: 10;
+}
 .group textarea {
     border: 1px solid #6B6B6B;
     border-radius: 5px;
