--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -101,10 +101,10 @@ select {
     border: 1px solid #9A13CA;
     background-image: url("../images/arrow-select-c.svg");
 }
-input[type="radio"]:checked + label {
+input[type="radio"]:checked + label,input[type="checkbox"]:checked + label {
     background-color: #9A13CA;
 }
-input[type="radio"] + label {
+input[type="radio"] + label,input[type="checkbox"] + label {
     border: 1px solid #9A13CA;
     color: #9A13CA;
 }
@@ -136,4 +136,7 @@ select.border-color {
 }
 .border {
     border: 1px solid #CEB5CE;
+}
+#img-label.active {
+    background-image: url("../images/img-active-c.svg");
 }
