--- a/public/css/owner.css
+++ b/public/css/owner.css
@@ -22,11 +22,11 @@
     padding: 0;
     border: 1.3px solid #084887;
 }
-input[type=radio] + label {
+input[type=radio] + label,input[type=checkbox] + label {
     border: 1px solid #084887;
     color: #084887;
 }
-input[type=radio]:checked + label {
+input[type=radio]:checked + label,input[type=checkbox]:checked + label {
     background-color:#084887;
 }
 .modal-body select {
@@ -151,4 +151,7 @@ select.border-color {
 }
 .border-main {
     border: 1px solid #084887;
+}
+#img-label.active {
+    background-image: url("../images/img-active-b.svg");
 }
