--- a/public/css/schedule.css
+++ b/public/css/schedule.css
@@ -120,13 +120,6 @@
     margin-bottom: 15px;
 }
 
-.edit {
-    padding: 0 47px;
-}
-.edit select {
-    margin-bottom: 10px;
-}
-
 .calendar {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
@@ -150,13 +143,29 @@
 /* Modal */
 .create {
     grid-template-rows: auto;
-    grid-gap: 10px;
+    grid-gap: 30px;
     padding: 0 10%;
 }
 .line.margin {
     margin: 25px 0;
 }
-
+.margin>.m20px-0:not(:first-child) {
+    margin-top: 20px;
+}
+.margin>.m20px-0:not(:last-child) {
+    margin-bottom: 20px;
+}
+.margin .btn-primary {
+    margin-top: 30px;
+}
+.inp {
+    font-weight: 600;
+    font-size: 14px;
+    color: #5B5B5B;
+}
+.inp:disabled {
+    background: none;
+}
 .modal-body .create input[type="text"]::placeholder {
     font-size: 14px;
 }
