--- a/public/css/mail.css
+++ b/public/css/mail.css
@@ -121,6 +121,7 @@ h1 {
     font-weight: 600;
     font-size: 14px;
     line-height: 17px;
+    white-space: pre-wrap;
 }
 
 @media screen and (max-width: 800px) {
