--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -153,7 +153,7 @@ b {
 }
 .btn.load-more {
     width: 169px;
-    background: white;
+    background: #717171;
     height: 30px;
     font-size: 11px;
     line-height: 13px;
