--- a/app/public/css/root/business.css
+++ b/app/public/css/root/business.css
@@ -1,5 +1,11 @@
 .create-block {
     padding-top: 63px;
+    padding-bottom: 30px;
+}
+@media screen and (max-width: 1100px) {
+    .create-block {
+        padding-bottom: 0;
+    }
 }
 .create-form {
     grid-template-columns: 141px 1fr;
@@ -7,6 +13,12 @@
     align-items: center;
     max-width: 70%;
     margin: 0 auto;
+}
+@media (max-width: 767px) {
+    .create-form {
+        max-width: 100%;
+        padding: 0 20px;
+    }
 }
 .create-form > label {
     font-weight: 500;
@@ -67,4 +79,12 @@ input.active {
     line-height: 17px;
     color: #5B5B5B;
     white-space: nowrap;
+}
+
+@media screen and (max-width: 1100px) {
+    .navbar-brand {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
