Add service types to craete user. Fix user/admin toggle

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -592,3 +592,10 @@ textarea {
     width: 15px;
     height: 15px;
 }
+
+.list-label {
+    font-size: 20px;
+    text-align: left;
+    margin-bottom: 5px;
+}
+
