fix timetables vie/edit; add button "clear all"

--- a/app/public/css/timetable.css
+++ b/app/public/css/timetable.css
@@ -28,3 +28,9 @@
 #select-all {
     margin-bottom: 15px;
 }
+
+button.btn-warning {
+    background-color: floralwhite;
+    color: dodgerblue;
+}
+
