--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -623,6 +623,9 @@ div.add-service {
 }
 
 #toast-container>.toast-info {
-    background-color: #d85389;
-    background-image: url('/images/notice_icon.svg') !important;
+    color:#232323;
+    background-color: #ffffff;
+    /*background-image: url('/images/notice_icon.svg') !important;*/
+    background-image: url('/images/notification_icon.png') !important;
+    background-size: 10%;
 }
