schedule on adminpanel without checks

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -629,3 +629,8 @@ div.add-service {
     background-image: url('/images/notification_icon.png') !important;
     background-size: 10%;
 }
+
+
+.pointer {
+    cursor: pointer
+}
